_sass/portfolio/_main.scss
@media only screen and (max-width: 600px) {
  main {
    > section {
      h2, h3, header, section, article, p, figure, img {
        flex-basis: 100%;
        text-align: center;
      }
    }
  }
}

@media only screen and (min-width: 600px) {
  main {
    > section {
      h2, h3, header, section, article, p, figure, img {
        width: 100%;
        max-width: 100%;
      }
    }

    section.section {

      article.project {
        figure {
          width: 30%;
        }

        .content {
          width: 70%;

          h3, p {
            padding-left: 5%;
            text-align: left;
          }
        }
      }
    }

    section#others {
      flex-direction: row;
      justify-content: space-around;

      header {
        flex-basis: 100%;
      }

      article.website {
        flex-basis: 25%;
        text-align: center;

        h3, p {
          flex-basis: 100%;
        }

        figure {
          flex-basis: 100%;
          img {
            width: 100%;
            max-width: 100%;
          }
        }
      }
    }
  }
}

main {
  display: flex;
  flex-direction: column;

  section#about {
    @extend .kong-gradient;
    padding: 5% 2%;

    p {
      @include fluid-type($min_width, $max_width, 16px, 32px);

      span {
        @include fluid-type($min_width, $max_width, 32px, 128px);
      }
    }
  }

  section.section {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 0 2%;

    &:nth-child(even) {
      background-color: #101a22;
      color: #fcebe0;
    }

    &:nth-child(odd) {
      background-color: #fcebe0;
      color: #101a22;

      article {
        figure {
          figcaption {
            p.description {
              color: black;
            }
          }
        }

        a {
          color: #cd0a0a;
        }
      }
    }

    > header {
      h2 {
        @include fluid-type($min_width, $max_width, 36px, 128px);
        padding: 10% 0;
        font-weight: lighter;
      }
    }

    article {
      display: flex;
      flex-wrap: wrap;
      padding-bottom: 5%;

      &:last-child {
        padding-bottom: 5%;
      }

      h3 {
        @include fluid-type($min_width, $max_width, 24px, 96px);
        font-family: $font-faster-one;
        font-weight: 400;
        padding-bottom: 10%;
      }

      figure {
        align-self: flex-start;

        img {
          border: 2px solid #f15a4c;
          border-radius: 8px;
          box-sizing: border-box;
        }
      }

      p {
        padding-bottom: 10%;

        &.badges {
          text-align: center;
        }
      }

      .content {
        display: flex;
        flex-direction: column;
      }
    }

    p {
      @include fluid-type($min_width, $max_width, $min_font, $max_font);

      a {
        color: #f15a4c;
        font-weight: bolder;
      }
    }
  }

  section#music {
    flex-direction: row;

    .album {
      display: block;
      flex-basis: 33%;

      .player {
        display: flex;
        align-items: flex-start;
        position: relative;

        &:before {
          content: "";
          display: block;
          padding-top: 100%;
        }

        iframe {
          position: absolute;
          top: 0;
          left: 0;
          bottom: 0;
          right: 0;
        }
      }
    }
  }
}

